Checks Policy Enforcement Guard